--- a/front/src/App.css
+++ b/front/src/App.css
@@ -28,6 +28,19 @@
   color: #61dafb;
 }
 
+.container {
+  display: grid;
+  flex-direction: column;
+  justify-items: center;
+}
+
+.container div {
+  padding: 1em;
+  width: 100%;
+}
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +48,22 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+input {
+  padding: 1em;
+}
+
+table {
+  width: 90%;
+  max-width: 500px;
+  margin: auto;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+td {
+  text-align: left;
 }
